Fix layout issues by using JS to apply vmin styles

--- a/app/assets/stylesheets/totem/totem.scss
+++ b/app/assets/stylesheets/totem/totem.scss
@@ -2,17 +2,15 @@
   main {
     max-width: none;
     padding: 0;
+    margin: 0;
   }
 
   totem-row {
     display: block;
     position: relative;
     width: 100%;
-    height: 80vmin;
-    margin: 2vmin 0;
-    text-align: center;
-    overflow: hidden;
-    cursor: pointer;
+    height: 80vmin; // Replaced by JS
+    margin: 2vmin 0; // Replaced by JS
     z-index: 1;
   }
   
@@ -22,32 +20,38 @@
     top: 0;
     width: 100%;
     height: 100%;
+    cursor: pointer;
     z-index: 10; // below panel
+  }
+  
+  clipping-layer {
+    display: block;
+    width: 100%;
+    height: 80vmin; // Replaced by JS
+    text-align: center;
+    overflow: hidden;
   }
   
   sliding-layer {
     display: block;
-    height: 80vmin;
-    // transition: transform .6s cubic-bezier(.2,.2,.3,.9);
+    height: 80vmin; // Replaced by JS
   }
   
   totem-item {
     display: block;
+    margin-left: calc(50vw - 41vmin); // Replaced by JS
     
     // This lets us stack all the images in the same spot, without using position:absolute because that breaks inherting parent transforms
     width: 0;
     height: 0;
     overflow: visible;
     
-    margin-left: calc(50% - 41vmin);
-    
-    // transition: opacity .4s cubic-bezier(.2,.2,.3,.9);
-    
     totem-image {
       display: inline-block;
-      width: 80vmin;
-      height: 80vmin;
+      width: 80vmin; // Replaced by JS
+      height: 80vmin; // Replaced by JS
       background-size: cover;
+      background-color: #F2F2F2;
     }
   }
 }
